# DATACLAW-AGENT

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.bundled  README.md  dataclaw structure interactive AI summary.html  docker-compose.bundled.yml  docker-compose.yml  pyproject.toml
dataclaw/: __init__.py  __main__.py  schema.py  state.py  tool_progress.py  tools.py
dataclaw/api/: __init__.py  app.py  context.py  deps.py  run_tracker.py
dataclaw/auth/: codex_bridge.py  codex_login.py
dataclaw/config/: __init__.py  paths.py  resolver.py  schema.py
dataclaw/events/: __init__.py  emitter.py  types.py
dataclaw/guardrails/: __init__.py  base.py  config.py  definitions.py  registry.py
dataclaw/hooks/: __init__.py  base.py  registry.py  sub_agent_hooks.py
dataclaw/loop/: __init__.py  graph.py  nodes.py  runner.py
dataclaw/plugins/: __init__.py  base.py  loader.py  registry.py
dataclaw/providers/: __init__.py  config_field.py
dataclaw/storage/: __init__.py  sessions.py  skill_library.py  skills.py
dataclaw/tests/: test_session_auto_project.py
docs/: analysis-review-prd.md  artifacts-prd.md  data-intake-prd.md  eda-findings-prd.md  modeling-evaluation-prd.md  plans-contract-prd.md  prd-portfolio.md  query-lab-prd.md  release3-branch-progress-report.md  report-builder-architecture.md  structured-eda-prd.md
docs/ui-upgrade/: chat-redesign-prd.md  chat-redesign-spec.md  chat-redesign.md
examples/Fifa WC 26/: fifa_wc_26.html  fifa_wc_26.ipynb
examples/Retail sales/: warehouse_retail_business_analysis_standalone.ipynb
examples/Starbucks/: starbucks_survey_analysis.ipynb
examples/structured_eda/: README.md  customer_events_sample.csv  expected_behavior.md
openclaw-plugins/dataclaw/: .gitignore  HOOK.md  (+5 more)
openclaw-plugins/dataclaw-frontend/: HOOK.md  index.ts  openclaw.plugin.json  package.json  setup-entry.ts
openclaw-plugins/dataclaw-tools/: HOOK.md  index.ts  openclaw.plugin.json  package.json  sync-manifest.sh  tsconfig.json
plugins/dataclaw-analysis-review/: pyproject.toml
plugins/dataclaw-analysis-review/dataclaw_analysis_review/: __init__.py  checklist.py  hooks.py  reviewer.py  router.py  store.py  tools.py
plugins/dataclaw-analysis-review/tests/: test_review_tools.py
plugins/dataclaw-artifacts/: pyproject.toml
plugins/dataclaw-artifacts/dataclaw_artifacts/: __init__.py  compiler.py  hooks.py  router.py  sections.py  store.py  tools.py  validator.py  wrapper.py
plugins/dataclaw-artifacts/tests/: test_artifacts.py
plugins/dataclaw-browser/: pyproject.toml
plugins/dataclaw-browser/dataclaw_browser/: __init__.py  provider.py  tools.py
plugins/dataclaw-browser/tests/: test_browser.py
plugins/dataclaw-codex/: pyproject.toml
plugins/dataclaw-codex/dataclaw_codex/: __init__.py  provider.py
plugins/dataclaw-custom-tools/: pyproject.toml
plugins/dataclaw-custom-tools/dataclaw_custom_tools/: __init__.py  mcp_connector.py  mcp_registry.py  router.py
plugins/dataclaw-data/: pyproject.toml
plugins/dataclaw-data/dataclaw_data/: __init__.py  registry.py  router.py  tools.py
plugins/dataclaw-data/tests/: test_data.py
plugins/dataclaw-eda/: pyproject.toml
plugins/dataclaw-eda/dataclaw_eda/: __init__.py  evidence.py  hooks.py  readiness.py  router.py  store.py  tools.py
plugins/dataclaw-eda/tests/: test_eda_tools.py  test_evidence_hook.py
plugins/dataclaw-gbrain/: pyproject.toml
plugins/dataclaw-gbrain/dataclaw_gbrain/: __init__.py  client.py  plugin.py  provider.py
plugins/dataclaw-gbrain/tests/: test_provider.py
plugins/dataclaw-kaggle/: pyproject.toml
plugins/dataclaw-kaggle/dataclaw_kaggle/: __init__.py  client.py  registry.py  router.py  tools.py
plugins/dataclaw-kaggle/tests/: test_kaggle.py
plugins/dataclaw-notebooks/: pyproject.toml
plugins/dataclaw-notebooks/dataclaw_notebooks/: __init__.py  helpers.py  manager.py  router.py  tools.py
plugins/dataclaw-notebooks/dataclaw_notebooks/runtime_packages/dataclaw_data/: __init__.py
plugins/dataclaw-notebooks/tests/: test_notebooks.py  test_path_resolution.py
plugins/dataclaw-openclaw/: pyproject.toml
plugins/dataclaw-openclaw/dataclaw_openclaw/: __init__.py  agent_provider.py  bridge.py  install_router.py  openclaw_install_service.py  skill_sync.py  tool_proxy.py
plugins/dataclaw-openclaw/tests/: test_install_service.py  test_openclaw.py
plugins/dataclaw-plans/: pyproject.toml
plugins/dataclaw-plans/dataclaw_plans/: __init__.py  gates.py  hooks.py  mlflow_tools.py  router.py  store.py  tools.py
plugins/dataclaw-plans/tests/: test_plans.py
plugins/dataclaw-projects/: pyproject.toml
plugins/dataclaw-projects/dataclaw_projects/: __init__.py  registry.py  router.py  subagents.py  tools.py
plugins/dataclaw-projects/tests/: test_projects.py
plugins/dataclaw-workspace/: pyproject.toml
plugins/dataclaw-workspace/dataclaw_workspace/: __init__.py  config.py  report_renderer.py  report_rubric.py  report_rubric.yaml  tools.py  visual_author.py
plugins/dataclaw-workspace/tests/: test_color_bindings.py  test_design_variance.py  test_interpretation_placement.py  test_report_rubric.py  test_tools.py  test_verified_freeform.py  test_visual_author.py
scripts/: build_wc26_knockout_forecast.py  entrypoint-bundled.sh  install_dataclaw_plugin.py  sync_openclaw_plugin.py  test-notebook.sh
skill-library/: README.md  analysis_review.md  artifacts.md  dashboarding.md  data_profiling.md  dataclaw.md  insight_validation.md  notebook_report.md  report_design.md  sql_analyst.md  structured_eda.md  visualization.md
tests/: conftest.py  prd_fixtures.py  test_artifacts_skill.py  test_chat_persistence.py  test_chat_turn_limit.py  test_config.py  test_file_preview_security.py  test_guardrails.py  test_hooks.py  test_loop.py  test_model_catalog.py  test_plan_artifact_contract.py  test_prd_alignment.py  test_prd_shared_fixtures.py  test_provider_schemas.py  test_run_health.py  test_skill_library.py  test_state.py  test_structured_eda_skill.py  test_tool_invoke_artifacts.py
ui/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+148 files in other folders)
