[project]
name = "dataclaw-analysis-review"
version = "0.1.0"
description = "Dataclaw plugin - deterministic analysis review lifecycle"
requires-python = ">=3.12"
dependencies = [
    "dataclaw",
    "dataclaw-plans",
    "dataclaw-eda",
    "dataclaw-artifacts",
]

[project.entry-points."dataclaw.plugins"]
dataclaw-analysis-review = "dataclaw_analysis_review:AnalysisReviewPlugin"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
