[project]
name = "dataclaw-data"
version = "0.1.0"
description = "Dataclaw plugin — data registry and DuckDB querying"
requires-python = ">=3.12"
dependencies = [
    "dataclaw",
    "duckdb>=1.0",
]

[project.entry-points."dataclaw.plugins"]
dataclaw-data = "dataclaw_data:DataPlugin"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
