[project]
name = "dataclaw-gbrain"
version = "0.1.0"
description = "Dataclaw plugin — memory backed by gbrain (https://github.com/garrytan/gbrain)"
requires-python = ">=3.12"
dependencies = [
    "dataclaw",
]

[project.entry-points."dataclaw.plugins"]
dataclaw-gbrain = "dataclaw_gbrain:GbrainPlugin"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
