[project]
name = "dataclaw-kaggle"
version = "0.1.0"
description = "Dataclaw plugin — Kaggle competitions, datasets, and submissions"
requires-python = ">=3.12"
dependencies = [
    "dataclaw",
    "kaggle>=1.6",
]

[project.entry-points."dataclaw.plugins"]
dataclaw-kaggle = "dataclaw_kaggle:KagglePlugin"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
