[project]
name = "dataclaw-openclaw"
version = "0.1.0"
description = "Dataclaw plugin — OpenClaw agent runtime bridge"
requires-python = ">=3.12"
dependencies = [
    "dataclaw",
    "httpx>=0.27",
]

[project.entry-points."dataclaw.plugins"]
dataclaw-openclaw = "dataclaw_openclaw:OpenClawPlugin"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
