[project]
name = "dataclaw-plans"
version = "0.1.0"
description = "Dataclaw plugin — plan proposal system and MLflow experiment tracking"
requires-python = ">=3.12"
dependencies = [
    "dataclaw",
    "mlflow>=2.0",
]

[project.entry-points."dataclaw.plugins"]
dataclaw-plans = "dataclaw_plans:PlansPlugin"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
